Fix vertical-align of select menu (was looking funky in firefox...)

--- a/src/MediaWiki:Gadget-afchelper.css
+++ b/src/MediaWiki:Gadget-afchelper.css
@@ -83,3 +83,7 @@ div#afcHelper_betanotice {
   width: 50%;
   padding: 3px;
 }
+
+#afcHelper_extra select {
+  vertical-align: middle;
+}
